# advent-of-code

./: .gitignore  pyproject.toml  run.py  template.py
2023/: 1.py  10.py  11.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
