[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["NickSager <121263610+NickSager@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2.0.4"
termcolor = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
